<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_auth_login">第三方账号登录</string>
    <string name="account_auth_login_failed">auth 登录失败</string>
    <string name="account_cancel">取消</string>
    <string name="account_change_password">修改密码</string>
    <string name="account_choose_find_pwd_style">请选择找回密码的方式</string>
    <string name="account_choose_find_pwd_style_email">邮箱找回</string>
    <string name="account_choose_find_pwd_style_phone">手机找回</string>
    <string name="account_choose_register_style">Select Registration Method</string>
    <string name="account_choose_register_style_email">邮箱注册</string>
    <string name="account_choose_register_style_phone">Mobile Number</string>
    <string name="account_complete">完成</string>
    <string name="account_continue">确认</string>
    <string name="account_country_code">国家地区代码</string>
    <string name="account_data_exception">数据解析异常</string>
    <string name="account_email_verify_code">邮箱校验码</string>
    <string name="account_error_time">当前时间设置异常</string>
    <string name="account_find_password">找回密码</string>
    <string name="account_forget_password">忘记密码？</string>
    <string name="account_get_accesstoken_error">获取AccessToken失败</string>
    <string name="account_get_country_error">获取国家地区码失败</string>
    <string name="account_get_userinfo_exception">获取用户数据失败</string>
    <string name="account_hot_country">Popular Country/Region</string>
    <string name="account_input_new_passwrod">输入新密码</string>
    <string name="account_input_password">输入密码</string>
    <string name="account_loading_loginout">Logging out...</string>
    <string name="account_login">登录</string>
    <string name="account_login_exception">登录异常</string>
    <string name="account_login_failed">登录失败</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_logout_failed">登出失败</string>
    <string name="account_logout_success">登出成功</string>
    <string name="account_name_hint">账号</string>
    <string name="account_network_anomaly">网络异常</string>
    <string name="account_next">下一步</string>
    <string name="account_not_login">未登录</string>
    <string name="account_password_hint">密码</string>
    <string name="account_phone">手机号</string>
    <string name="account_phone_number">手机号码</string>
    <string name="account_phone_register">手机注册</string>
    <string name="account_register">免费注册</string>
    <string name="account_register_free">注册账号</string>
    <string name="account_reset_pwd">重置密码</string>
    <string name="account_select_country_code">Select Country/Region Code</string>
    <string name="account_send_email_code">发送邮箱校验码</string>
    <string name="account_send_verify_code">发送验证码</string>
    <string name="account_sms_verify_code">验证码</string>
    <string name="account_ssl_error">当前页面SSL证书可能不被信任，确认打开?</string>
    <string name="account_sure">确定</string>
    <string name="account_user_name">用户名</string>
    <string name="action_add_app_keys">ADD</string>
    <string name="action_apply">Apply</string>
    <string name="action_bind_app_key">Bind Key</string>
    <string name="action_clear_publication">Clear Publication</string>
    <string name="action_composition_data">GET COMPOSITION DATA</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_generic_off">OFF</string>
    <string name="action_generic_on">ON</string>
    <string name="action_generic_read_state">READ STATE</string>
    <string name="action_reset_network">Reset Network</string>
    <string name="action_reset_node">RESET</string>
    <string name="action_scanner">Scanner</string>
    <string name="action_send">Send</string>
    <string name="action_set_publish_address">Set Publication</string>
    <string name="action_settings">Settings</string>
    <string name="action_subscribe_address">Subscribe</string>
    <string name="action_unbind_app_key">Unbind Key</string>
    <string name="action_unsubscribe_address">Unsubscribe</string>
    <string name="action_view_added_keys">VIEW</string>
    <string name="action_view_app_keys">VIEW</string>
    <string name="ali_sdk_openaccount_cancel">取消</string>
    <string name="ali_sdk_openaccount_confirm">确定</string>
    <string name="ali_sdk_openaccount_dynamic_icon_arrow_down"></string>
    <string name="ali_sdk_openaccount_dynamic_icon_arrow_up"></string>
    <string name="ali_sdk_openaccount_dynamic_icon_eye"></string>
    <string name="ali_sdk_openaccount_dynamic_icon_eye_open"></string>
    <string name="ali_sdk_openaccount_dynamic_loading_progress_message">加载中...</string>
    <string name="ali_sdk_openaccount_dynamic_network_not_available_message">网络无法连接</string>
    <string name="ali_sdk_openaccount_dynamic_system_exception">系统异常</string>
    <string name="ali_sdk_openaccount_dynamic_text_activity_basewebviewactivity_strings_menulist_copy">已复制到剪贴板</string>
    <string name="ali_sdk_openaccount_dynamic_text_alert_msg_after_login">您的菜鸟用户名：%1$s \n登录密码与大宝账号密码相同，请牢记</string>
    <string name="ali_sdk_openaccount_dynamic_text_back_message">返回</string>
    <string name="ali_sdk_openaccount_dynamic_text_close_message">关闭</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check">是否现在去邮箱检查邮件</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check_no">否</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check_yes">是</string>
    <string name="ali_sdk_openaccount_dynamic_text_iknow">我知道了</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_default_verify_error">验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_nocapcha_verify_error">滑动验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_sms_verify_error">短信验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_mobile">手机号码</string>
    <string name="ali_sdk_openaccount_dynamic_text_mobile_or_login_id">手机号码/昵称</string>
    <string name="ali_sdk_openaccount_dynamic_text_network_exception">网络不稳定，请稍后再试</string>
    <string name="ali_sdk_openaccount_dynamic_text_offline_exception">账户名密码错误，你也可以尝试连接网络后重试</string>
    <string name="ali_sdk_openaccount_dynamic_text_qr_confirm_title_bar">扫码登录</string>
    <string name="ali_sdk_openaccount_dynamic_text_system_exception">系统繁忙，请稍后再试.</string>
    <string name="ali_sdk_openaccount_email_code_success_hint">验证码已发送至你的邮箱，可能会有延后请耐心等待</string>
    <string name="ali_sdk_openaccount_icon_alipay"></string>
    <string name="ali_sdk_openaccount_icon_back"></string>
    <string name="ali_sdk_openaccount_icon_check_code"></string>
    <string name="ali_sdk_openaccount_icon_clear"></string>
    <string name="ali_sdk_openaccount_icon_mobile"></string>
    <string name="ali_sdk_openaccount_icon_password"></string>
    <string name="ali_sdk_openaccount_icon_qq"></string>
    <string name="ali_sdk_openaccount_icon_qr_close"></string>
    <string name="ali_sdk_openaccount_icon_qr_scan"></string>
    <string name="ali_sdk_openaccount_icon_qr_text" />
    <string name="ali_sdk_openaccount_icon_refresh_check_code"></string>
    <string name="ali_sdk_openaccount_icon_sms_code"></string>
    <string name="ali_sdk_openaccount_icon_taobao"></string>
    <string name="ali_sdk_openaccount_icon_user"></string>
    <string name="ali_sdk_openaccount_icon_weibo"></string>
    <string name="ali_sdk_openaccount_icon_weixin"></string>
    <string name="ali_sdk_openaccount_login_icon_qr_password"></string>
    <string name="ali_sdk_openaccount_ssl_error_info">证书错误. 是否继续访问?</string>
    <string name="ali_sdk_openaccount_ssl_error_title">SSL证书错误</string>
    <string name="ali_sdk_openaccount_text_account_device">设备管理</string>
    <string name="ali_sdk_openaccount_text_account_nonexist">账户不存在</string>
    <string name="ali_sdk_openaccount_text_account_security_info">开启后，在新设备登录会要求验证用户身份</string>
    <string name="ali_sdk_openaccount_text_account_security_title">登录保护</string>
    <string name="ali_sdk_openaccount_text_agree">同意</string>
    <string name="ali_sdk_openaccount_text_alipay">支付宝</string>
    <string name="ali_sdk_openaccount_text_already_register">手机号 %s 已经注册</string>
    <string name="ali_sdk_openaccount_text_change_mobile">绑定手机号</string>
    <string name="ali_sdk_openaccount_text_check_code">验证码</string>
    <string name="ali_sdk_openaccount_text_checkcode">验证码</string>
    <string name="ali_sdk_openaccount_text_confirm">确定</string>
    <string name="ali_sdk_openaccount_text_confirm_pwd">确认密码</string>
    <string name="ali_sdk_openaccount_text_confirm_register">同意协议并注册</string>
    <string name="ali_sdk_openaccount_text_enter_mobile">输入手机号</string>
    <string name="ali_sdk_openaccount_text_exit_register">不注册,退出</string>
    <string name="ali_sdk_openaccount_text_login_password">登录密码</string>
    <string name="ali_sdk_openaccount_text_mail">邮箱</string>
    <string name="ali_sdk_openaccount_text_not_register">手机号 %s 还没注册</string>
    <string name="ali_sdk_openaccount_text_other_plateform_login">其他账号登录</string>
    <string name="ali_sdk_openaccount_text_protocol">《关于注册菜鸟智能柜的协议》</string>
    <string name="ali_sdk_openaccount_text_qq">QQ</string>
    <string name="ali_sdk_openaccount_text_register">注册</string>
    <string name="ali_sdk_openaccount_text_register_password_rule">密码由%1$d–%2$d位英文、数字、或符号组成</string>
    <string name="ali_sdk_openaccount_text_send_sms_code">发送短信验证码</string>
    <string name="ali_sdk_openaccount_text_set_pwd">设置密码(6位及以上数字、字母组合)</string>
    <string name="ali_sdk_openaccount_text_sms_code">短信校验码</string>
    <string name="ali_sdk_openaccount_text_taobao">淘宝</string>
    <string name="ali_sdk_openaccount_text_weibo">微博</string>
    <string name="ali_sdk_openaccount_text_weixin">微信</string>
    <string name="ali_sdk_openaccount_text_whether_to_register">是否用该手机号注册?</string>
    <string name="alog_system">ALog System</string>
    <string name="choose_files">选择文件(截图，录屏等)</string>
    <string name="chosen_files">待上传文件:</string>
    <string name="dump_raw_log">获取当前系统log</string>
    <string name="report_bug">Report Bug</string>
    <string name="search_alog">Go search</string>
    <string name="upload_files">上传已选择文件</string>
</resources>