<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:inputBox="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textSize="16sp"
        android:id="@+id/other_plateform_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ali_sdk_openaccount_text_other_plateform_login"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/oauth_1_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/oauth_1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/ali_sdk_openaccount_icon_taobao"/>
            <TextView
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/oauth_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ali_sdk_openaccount_text_taobao"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/oauth_4_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/oauth_4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/ali_sdk_openaccount_icon_qq"/>
            <TextView
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/oauth_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ali_sdk_openaccount_text_qq"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/oauth_3_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/oauth_3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/ali_sdk_openaccount_icon_weibo"/>
            <TextView
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/oauth_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ali_sdk_openaccount_text_weibo"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/oauth_2_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/oauth_2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/ali_sdk_openaccount_icon_weixin"/>
            <TextView
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/oauth_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ali_sdk_openaccount_text_weixin"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/oauth_5_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/oauth_5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/ali_sdk_openaccount_icon_alipay"/>
            <TextView
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/oauth_5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ali_sdk_openaccount_text_alipay"/>
        </LinearLayout>
    </LinearLayout>
</merge>
