<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:user="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:gravity="center_vertical"
        android:id="@+id/ali_user_mobile_input_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ali_sdk_openaccount_text_enter_mobile"/>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/ali_user_register_protocol_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ali_sdk_openaccount_text_agree"/>
        <TextView
            android:id="@+id/ali_user_register_protocol"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ali_sdk_openaccount_text_protocol"/>
    </LinearLayout>
    <Button
        android:id="@+id/ali_user_mobile_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ali_sdk_openaccount_text_confirm"/>
</LinearLayout>
