<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:user="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:gravity="center_vertical"
        android:id="@+id/ali_user_pwd_input_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ali_sdk_openaccount_text_set_pwd"/>
    <EditText
        android:gravity="center_vertical"
        android:id="@+id/ali_user_pwd_confirm_input_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ali_sdk_openaccount_text_confirm_pwd"/>
    <Button
        android:id="@+id/ali_user_reset_pwd_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ali_sdk_openaccount_text_confirm"/>
</LinearLayout>
