<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:inputBox="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/ali_sdk_openaccount_bg_corners_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.alibaba.sdk.android.openaccount.ui.widget.InputBoxWithClear
                    android:gravity="center_vertical"
                    android:id="@+id/mail_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_mail"
                    inputBox:ali_sdk_openaccount_attrs_inputType="textNormal"
                    inputBox:ali_sdk_openaccount_attrs_leftIconText="@string/ali_sdk_openaccount_icon_user"/>
                <include layout="@layout/ali_sdk_openaccount_horizontal_frame_edge"/>
                <com.alibaba.sdk.android.openaccount.ui.widget.SmsCodeInputBox
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:id="@+id/check_code_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_check_code"/>
                <include layout="@layout/ali_sdk_openaccount_horizontal_frame_edge"/>
                <com.alibaba.sdk.android.openaccount.ui.widget.PasswordInputBox
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:id="@+id/password_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_login_password"/>
            </LinearLayout>
            <TextView
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:id="@+id/ali_oa_send_email_success_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ali_sdk_openaccount_text_register_password_rule"/>
            <com.alibaba.sdk.android.openaccount.ui.widget.PasswordLevelView
                android:id="@+id/ali_oa_password_stronger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
            <com.alibaba.sdk.android.openaccount.ui.widget.NextStepButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ali_sdk_openaccount_text_register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
