<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:id="@+id/alog_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alog_system"/>
            <TextView
                android:id="@+id/alog_sysinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/alog_lable"
                android:textIsSelectable="true"/>
            <EditText
                android:id="@+id/bugTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入Bug Title"
                android:layout_below="@+id/alog_sysinfo"/>
            <EditText
                android:id="@+id/bugDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入Bug Description"
                android:layout_below="@+id/bugTitle"/>
            <Button
                android:id="@+id/dumpRawLogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dump_raw_log"
                android:layout_below="@+id/bugDescription"/>
            <TextView
                android:id="@+id/ossUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="ossUrl : "
                android:layout_below="@+id/dumpRawLogBtn"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/uploadPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ossUrl">
                <Button
                    android:id="@+id/chooseFiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_files"
                    android:layout_below="@+id/ossUrl"/>
                <Button
                    android:id="@+id/uploadChosenFiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_files"/>
            </LinearLayout>
            <TextView
                android:id="@+id/chosenFileListTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/chosen_files"
                android:layout_below="@+id/uploadPanel"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/uploadFilesLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chosenFileListTv"/>
            <Button
                android:enabled="false"
                android:id="@+id/reportBugBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_bug"
                android:layout_below="@+id/uploadFilesLL"/>
            <Button
                android:id="@+id/goSearchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_alog"
                android:layout_below="@+id/reportBugBtn"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
