<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:inputBox="http://schemas.android.com/apk/res-auto">
    <com.alibaba.sdk.android.openaccount.ui.widget.InputBoxWithClear
        android:gravity="center_vertical"
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_check_code"
        inputBox:ali_sdk_openaccount_attrs_inputType="textPassword"
        inputBox:ali_sdk_openaccount_attrs_leftIconText="@string/ali_sdk_openaccount_icon_check_code"/>
    <include layout="@layout/ali_sdk_openaccount_vertical_frame_edge"/>
    <ImageView
        android:gravity="center"
        android:id="@+id/image"
        android:background="@null"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:scaleType="fitCenter"/>
    <Button
        android:textSize="20sp"
        android:textColor="#cccccc"
        android:gravity="center"
        android:id="@+id/refresh"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:text="@string/ali_sdk_openaccount_icon_refresh_check_code"/>
</merge>
